fix: add nowrap to device type toggle (#774)

--- a/src/components/panels/NetworkDevice/components/_device-settings.scss
+++ b/src/components/panels/NetworkDevice/components/_device-settings.scss
@@ -19,9 +19,13 @@
 }
 
 .device-settings_grid-column-left {
-  /* empty block */
+  .device-settings_toggle-label-nowrap {
+    white-space: pre;
+  }
 }
 
 .device-settings_grid-column-right {
-  /* empty block */
+  .device-settings_toggle-label-nowrap {
+    white-space: pre;
+  }
 }
